<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".calendar.CalendarActivity">

    <com.example.jorunal_bishe.widgets.BorderText
        android:id="@+id/bt_top"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:drawableLeft="@mipmap/previous_year"
        android:drawableRight="@mipmap/next_year"
        android:gravity="center"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:textSize="15sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22.0dip"
        android:background="#ff8091a8">

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="#ffffffff"
            android:textSize="14.0dip"/>

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/monday"
            android:textColor="#ffffffff"
            android:textSize="14.0dip"/>

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textColor="#ffffffff"
            android:textSize="14.0dip"/>

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textColor="#ffffffff"
            android:textSize="14.0dip"/>

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/thursday"
            android:textColor="#ffffffff"
            android:textSize="14.0dip"/>

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/friday"
            android:textColor="#ffffffff"
            android:textSize="14.0dip"/>

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/saturday"
            android:textColor="#ffffffff"
            android:textSize="14.0dip"/>
    </LinearLayout>

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
