<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settingItem="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.example.jorunal_bishe.widgets.SettingItemView
        android:id="@+id/item_update_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        settingItem:settingName="@string/text_modify_classify"
        settingItem:settingType="arrow"></com.example.jorunal_bishe.widgets.SettingItemView>

    <com.example.jorunal_bishe.widgets.SettingItemView
        android:id="@+id/item_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:layout_marginTop="@dimen/padding_margin_15"
        settingItem:settingName="@string/text_update"
        settingItem:settingType="arrow" />

    <com.example.jorunal_bishe.widgets.SettingItemView
        android:id="@+id/item_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:layout_marginTop="@dimen/padding_margin_15"
        settingItem:settingName="@string/text_about"
        settingItem:settingType="arrow" />
</LinearLayout>