<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_popup_bg"
        android:text="@string/camera"
        android:textColor="@color/black"
        android:textSize="@dimen/main_text_size"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/assist_text_color"/>

    <Button
        android:id="@+id/btn_photo_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_popup_bg"
        android:text="@string/photo_gallery"
        android:textColor="@color/black"
        android:textSize="@dimen/main_text_size"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/assist_text_color"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_popup_bg"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/main_text_size"/>
</LinearLayout>