<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".record.IncomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:addStatesFromChildren="true"
        android:background="@drawable/selector_text_bg"
        android:orientation="horizontal">

        <com.example.jorunal_bishe.widgets.ClearEditText
            android:id="@+id/cet_money"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@mipmap/rmb"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/pay_out_money"
            android:inputType="numberDecimal"/>

        <ImageView
            android:id="@+id/ib_camera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            android:contentDescription="@null"
            android:src="@mipmap/camera_btn"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_classify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/selector_text_bg"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_classify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/classify"
            android:textSize="@dimen/assist_text_size"/>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_classify"
            android:padding="5dp"
            android:text="@string/classify"
            android:textColor="@android:color/black"
            android:textSize="@dimen/main_text_size"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/selector_text_bg"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/date"
            android:textSize="@dimen/assist_text_size"/>

        <TextView
            android:id="@+id/tv_date_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_date"
            android:padding="5dp"
            android:text="@string/date"
            android:textColor="@android:color/black"
            android:textSize="@dimen/main_text_size"/>
    </RelativeLayout>

    <com.example.jorunal_bishe.widgets.ClearEditText
        android:id="@+id/cet_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/selector_text_bg"
        android:gravity="left"
        android:hint="@string/remark"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btn_save"
        style="@style/MainBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_main_btn_shape"
        android:text="@string/save"/>
</LinearLayout>
