<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:textSize="18dp"
            android:textColor="@color/black"></TextView>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_top_bg"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/tv_income_text"
                style="@style/MainTopTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_month_income" />

            <TextView
                android:id="@+id/tv_income_value"
                style="@style/MainTopTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:drawableRight="@mipmap/arrow_next"
                android:drawablePadding="5dp"
                android:text="@string/this_month_income" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_income_text"
                android:background="#EBBA3A" />

            <TextView
                android:id="@+id/tv_payout_text"
                style="@style/MainTopTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line1"
                android:text="@string/this_month_pay_out" />

            <TextView
                android:id="@+id/tv_payout_value"
                style="@style/MainTopTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line1"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:drawableRight="@mipmap/arrow_next"
                android:drawablePadding="5dp"
                android:text="@string/this_month_pay_out" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_payout_text"
                android:background="#EBBA3A" />

            <TextView
                android:id="@+id/tv_surplus_text"
                style="@style/MainTopTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line2"
                android:text="@string/budget_surplus" />

            <TextView
                android:id="@+id/tv_surplus_value"
                style="@style/MainTopTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line2"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:drawableRight="@mipmap/arrow_next"
                android:drawablePadding="5dp"
                android:text="@string/budget_surplus" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_remember"
                style="@style/MainBtnStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_main_btn_shape"
                android:text="@string/remember" />

            <ListView
                android:id="@+id/rc_journal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_remember"
                android:layout_marginTop="10dp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>